# ubiquitous-journey

./: .gitignore  CLAUDE.md  README.md  df.html  index.html  tsconfig.json
.claude/: launch.json
docs/: decision-system.html  director-levers.md  drama-plan.md  goal-system-tests.md  goal-system.md  llm-npcs.md  reasoning-traces.md  refactor-plan.md  reporter-agent-design.md  roadmap.md  slm-opportunities.md  story-quests.md  trope-catalog.md
docs/architecture/: 00-overview.md  01-sim-spine.md  02-epistemic-split.md  07-ui.md  (+23 more)
js/: arena.js  arena.ts  assets.js  assets.ts  boot.js  boot.ts  camera.js  camera.ts  combat.js  combat.ts  commander.js  commander.ts  constants.js  constants.ts  enemy.js  enemy.ts  fighter.js  fighter.ts  headlessFighter.js  headlessFighter.ts  input.js  input.ts  main.js  player.js  player.ts  playerControls.js  playerControls.ts
rust/: Cargo.toml
rust/protocol/: Cargo.toml
rust/protocol/src/: lib.rs
rust/server/: Cargo.toml
rust/server/src/: lib.rs  main.rs
test/: behaviortrace.mjs  beliefsweep.mjs  bench.mjs  buildprobe.mjs  depth.mjs  df.mjs  distprobe.mjs  explore.mjs  harness.mjs  headless.mjs  health.mjs  history.mjs  knowledgeprobe.mjs  levelbench.mjs  lifetrace.mjs  profrun.mjs  record.mjs  scaling.mjs  scenarios.mjs  scratch-abilityprobe.mjs  scratch-expedprobe.mjs  seedrepro.mjs  starveprobe.mjs  townprobe.mjs
types/: abilities.ts  agent.ts  arcs.ts  beliefs.ts  combat.ts  core.ts  ctx.ts  economy.ts  events.ts  goals.ts  memory.ts  motivation.ts  news.ts  percept.ts  reasoning.ts  rpg.ts  sim.ts  trace.ts  world.ts
(+314 files in other folders)
